fixed tags in the last line to not stretch with the input

--- a/client/components/token-field/style.scss
+++ b/client/components/token-field/style.scss
@@ -26,6 +26,7 @@
 .token-field__input-container {
 	display: flex;
 	flex-wrap: wrap;
+	align-items: flex-start;
 	padding: 7px 14px 0 0;
 }
 
